bdr.BDR.scala.error
Compilation error:
BDR:1: error: not found: value R
if (readMessage()==R) {
                   ^BDR:5: error: not found: value L
if (readMessage()==L) {
                   ^BDR:9: error: not found: value I
if (readMessage()==I) {
                   ^BDR:14: error: not found: value A
if (readMessage()==A) {
                   ^BDR:17: error: not found: value B
if (readMessage()==B) {
                   ^BDR:21: error: not found: value C
if (readMessage()==C) {
                   ^BDR:26: error: not found: value Z
if (readMessage()==Z) {
                   ^BDR:29: error: not found: value Y
if (readMessage()==Y) {
                   ^BDR:33: error: not found: value X
if (readMessage()==X) {
                   ^